<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/homepage_menu_item"
        android:title="Accueil"
        android:icon="@drawable/ic_launcher_background"/>

    <item android:title="@string/play_title">
        <menu>
            <item
                android:id="@+id/play_offline_solo_menu_item"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/play_offline_solo_title" />
            <item
                android:id="@+id/play_offline_multi_menu_item"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/play_offline_multi_title" />

        </menu>
    </item>

    <item android:title="@string/objectives_title">
        <menu>
            <item
                android:id="@+id/consult_objectives_menu_item"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/consult_objectives_title" />
            <item
                android:id="@+id/create_objective_menu_item"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/create_objectives_title" />
        </menu>
    </item>

    <item android:title="@string/wheels_title">
        <menu>
            <item
                android:id="@+id/consult_wheels_menu_item"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/consult_wheels_title" />
            <item
                android:id="@+id/create_wheel_menu_item"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/create_wheels_title" />
        </menu>
    </item>


</menu>
