<?xml version="1.0" encoding="utf-8"?>


<FrameLayout android:id="@+id/content_frame"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="22sp"
            android:text="Bienvenue"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textStyle="italic"
            android:text="@string/game_description"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textStyle="italic"
            android:text="@string/game_description_part_2"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textStyle="italic"
            android:text="@string/game_description_part_3"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                >
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/try_playing_alone"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/white"
                    android:layout_marginBottom="30dp"
                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/try_playing_multi"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/white"
                    android:layout_marginBottom="30dp"
                    />
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>


</FrameLayout>
