<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="personal.nmartinez.fr.spingoal.playofflinesolo.view.PlayOfflineSoloFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/wheel_icon"
                    />

                <TextView
                    android:id="@+id/selected_wheel_textview_single_player"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/every_wheels"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:fontFamily="casual"
                    android:textStyle="bold"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_gravity="center">

                <View
                    android:layout_width="80dp"
                    android:layout_height="1dp"
                    android:layout_weight="0.5"
                    android:background="@color/main_green"
                    />

                <View android:layout_width="80dp"
                    android:layout_height="1dp"
                    android:layout_weight="0.5"
                    android:background="@color/gold"
                    />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/stars_layout"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/pick_stars_button"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/roll"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/star_number_label"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:gravity="center"
                />

            <ImageView
                android:id="@+id/selected_stars_imageview_single_player"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:src="@drawable/randomstars"
                />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="120sp"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/pick_first_period_objective_single_player"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/roll"
                    />

                <ImageView
                    android:id="@+id/hide_or_display_first_period_objective_single_player"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/hide_icon"
                    />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:fontFamily="casual"
                android:textSize="18sp"
                android:text="@string/first_period"/>

            <TextView
                android:id="@+id/first_period_objective_textview_single_player"
                android:layout_height="80dp"
                android:textColor="@color/white"
                android:background="@color/main_green"
                android:layout_width="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:padding="4dp"
                android:textSize="18sp"
                android:text="@string/pick_objective_label"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="120sp"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/pick_second_period_objective_single_player"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/roll"
                    />

                <ImageView
                    android:id="@+id/hide_or_display_second_period_objective_single_player"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/hide_icon"
                    />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:fontFamily="casual"
                android:textSize="18sp"
                android:text="@string/second_period"/>

            <TextView
                android:id="@+id/second_period_objective_textview_single_player"
                android:layout_height="80dp"
                android:textColor="@color/white"
                android:background="@color/main_green"
                android:layout_width="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:padding="4dp"
                android:textSize="18sp"
                android:text="@string/pick_objective_label"/>

        </LinearLayout>







    </LinearLayout>

</ScrollView>

</FrameLayout>
